# learn_ceres

./: .gitignore  snavely_reprojection_error.h
bundle_adjustment/: CMakeLists.txt  ba.cpp  bal_problem.cc  bal_problem.h  bundle_adjuster.cc
curve_fitting/: CMakeLists.txt  curve_fitting.cpp
hello_ceres/: CMakeLists.txt  main.cpp
powell_function/: CMakeLists.txt  powell_function.cpp
